k8s/init-services/07-vets-service-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vets-service
  name: vets-service
  namespace: spring-petclinic
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: vets-service
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vets-service-vs
  namespace: spring-petclinic
spec:
  hosts:
    - "vets-service.spring-petclinic.svc.cluster.local"
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            port:
              number: 8080
            host: vets-service.spring-petclinic.svc.cluster.local
