k8s/init-services/08-visits-service-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: visits-service
  name: visits-service
  namespace: spring-petclinic  
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: visits-service
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: visits-service-vs
  namespace: spring-petclinic
spec:
  hosts:
    - "visits-service.spring-petclinic.svc.cluster.local"
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            port:
              number: 8080
            host: visits-service.spring-petclinic.svc.cluster.local
